(Peter Coetzee)
- S.F Patch 2031532 DAO Singletons

(Mark Diggory)
- New options for ItemImporter to support bitstream permissions and descriptions.

(Graham Triggs/Mark Diggory)
- S.F. Bug 1824710 Creative Commons RDF has changed. Adjusted CC processing to be XSL driven 
  and adjusted generated XML/RDF. Created LicenseCleanup CLI to process existing CC license_rdf
  
(Brian Helm)
SF Patch 1794700  Bug fix for stat-monthly and stat-report-monthly

(Robert Tansley / Barhatov Andrew)
- Authentication code moved to new org.dspace.authenticate package
- Added IP Authentication (SF patch #1566820)

(Richard Jones)
- S.F. Patch 1670093 More stable metadata and schema registry import
- Option to generate community and collection "strength" as a batch job
- S.F. Patch 1659868 Improved database level debugging
- Option to generate community and collection "strength" as a batch job
- S.F. Patch 1659868 Improved database level debugging

(Richard Jones / Graham Triggs)
- New Browse code that allows customisation of the available indexes via dspace.cfg,
  and pluggable normalisation of the sort strings.
  Integration with both JSP-UI and XML-UI included.
  (S.F. Patches 1702233 and 1672065)

(Flavio Botelho)
- S.F. Patch 1764069 Replace "String" with "Integer" in PreparedStatement
  Parameters where appropriate.
- SF Patch 1743188 Patch for Request #1145499 - Move Items

(Mark Diggory)
- Guard against output invalid unqualified Dublin Core in OAIDCCrosswalk.

(Graham Triggs / Brad Teale / Ed Yu)
- S.F. Patch 1679972 OAIDCCrosswalk NPE and invalid character fix

(Graham Triggs)
- Metadata Exporter (Implements request: #1444364)
- ConfigurationManager fix to honour log4j.configuration
- S.F. Patch 1749196 Oracle SQL in Bitstream Checker
- S.F. Patch 1740579 Patch for bug 1740454 (Concurrency)
- Admin browser for withdrawn items (implements feature request #1221957)

(Larry Stone, Richard Rodgers, Sands Fish, Mark Diggory)
- S.F. Patch 1633596 Event System for DSpace 1.5
