@@ -1,3 +1,6 @@
+(Andrea Bollini)
+- S.F. Patch 2645776 for Bug 2645754 SubmissionController is not thread safe
+
 (Peter Coetzee)
 - S.F Patch 2031532 DAO Singletons
 
